--- a/style.css
+++ b/style.css
@@ -10,23 +10,22 @@ h2{
     margin: 2rem;
     font-size: 3rem;
 }
-#select:hover{
+#reset:hover{
     background-color: rgb(54, 54, 54);
     cursor: pointer;
 }
-#select{
+#reset{
     display: block;
     margin: 3rem auto;
     padding: .5rem;
     font-size: large;
     border: 1px solid white;
-    transform: translateX(-.5rem);
 }
 .action:hover{
     cursor: pointer;
     background-color: rgb(54, 54, 54);
 }
-.action:active , #select:active{
+.action:active , #reset:active{
     background-color: rgb(95, 95, 95);
 }
 .action{
@@ -41,13 +40,9 @@ h2{
     width: 24rem;
     transform: translateX(1rem);
 }
-.result {
-    margin: 1.5rem 0;
-    font-size: x-large;
-}
-#result{
+#result1{
     font-size: xx-large;
-    text-align: center;
+    height: 10rem;
 }
 #popup{
     position: absolute;
@@ -56,6 +51,7 @@ h2{
     text-align: center;
     top: 0;
     padding: 5rem;
+    display: none;
 }
 #start:active{
     background-color: rgb(194, 194, 194);
@@ -77,4 +73,7 @@ h2{
     padding: .5rem;
     margin-top: 5rem;
     font-size: large;
+}
+#score{
+    font-size: larger;
 }
