--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ h2{
     width: 24rem;
     transform: translateX(1rem);
 }
-#result1{
+#result{
     font-size: xx-large;
-    height: 10rem;
+    height: 7rem;
 }
 #popup{
     position: absolute;
@@ -74,6 +74,16 @@ h2{
     margin-top: 5rem;
     font-size: large;
 }
+#score span{
+    padding: 1rem 3rem;
+}
 #score{
     font-size: larger;
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid white;
+}
+#tie{
+    border-right:  1px solid white;
+    border-left:  1px solid white;
 }
