--- a/style.css
+++ b/style.css
@@ -83,3 +83,9 @@ h2{
     display: flex;
     justify-content: space-around;
 }
+@media only screen and (max-width: 600px) {
+    #score span{
+        padding: 1rem 1.8rem;
+    }
+    
+}
